--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,7 +2,7 @@ portal-projection-view-distance: 8
 portal-display-range: 32
 hide-portal-blocks: true
 cancel-teleport-when-linking-portals: true
-debug-messages: false
+debug-messages: true
 worlds-with-portal-viewing:
   - world
   - world_nether
