--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
         </repository>
         <repository>
             <id>dmulloy2-repo</id>
-            <url>https://repo.dmulloy2.net/nexus/repository/public/</url>
+            <url>https://repo.dmulloy2.net/repository/public/</url>
         </repository>
         <repository>
             <id>CodeMC</id>
@@ -93,14 +93,13 @@
         <dependency>
             <groupId>com.comphenix.protocol</groupId>
             <artifactId>ProtocolLib</artifactId>
-            <version>5.3.0</version>
-            <scope>provided</scope>
+            <version>5.4.0-20250730.145634-1</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.bstats</groupId>-->
-<!--            <artifactId>bstats-bukkit</artifactId>-->
-<!--            <version>1.7</version>-->
-<!--            <scope>compile</scope>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+            <version>1.8</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
